Finishade while loopen i main och kommenterade kod

--- a/PRR02 Slutprojekt 2019-2020/PRR02 Slutprojekt 2019-2020/PRR02 Slutprojekt 2019-2020.csproj
+++ b/PRR02 Slutprojekt 2019-2020/PRR02 Slutprojekt 2019-2020/PRR02 Slutprojekt 2019-2020.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CultEvents.cs" />
     <Compile Include="CultInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
